--- a/src/pages/index/index.wxml
+++ b/src/pages/index/index.wxml
@@ -1,7 +1,5 @@
 <view class="index">
     <text>I am a page</text>
-    <view class="content">3353334444553333</view>
-    <text>{{name}}</text>
-    <button bindtap="goShop">商城</button>
-    <test></test>
+    <test>I am a component</test>
+    <view class="content"></view>
 </view>
