--- a/src/pages/index/index.wxml
+++ b/src/pages/index/index.wxml
@@ -2,4 +2,12 @@
     <text>I am a page</text>
     <test>I am a component</test>
     <view class="content"></view>
+
+    <navigation-bar
+            bindnavback="onnavback"
+            enable="{{enable}}"
+            show-loading="{{loading}}"
+            title="{{title}}">
+
+    </navigation-bar>
 </view>
